--- a/DGeneration/Base.lproj/Main.storyboard
+++ b/DGeneration/Base.lproj/Main.storyboard
@@ -2,8 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NHS-7K-d7Q">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,74 +16,22 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="6su-m9-8la" kind="relationship" relationship="rootViewController" id="Beh-6x-9yc"/>
+                        <segue destination="m4g-yg-bLo" kind="relationship" relationship="rootViewController" id="g3m-Cg-rKa"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZOD-0G-hNY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1520" y="108"/>
         </scene>
-        <!--Home View Controller-->
-        <scene sceneID="uSj-Ic-bcs">
+        <!--Home-->
+        <scene sceneID="sVR-xo-GJb">
             <objects>
-                <viewController id="6su-m9-8la" customClass="DGHomeViewController" customModule="DGeneration" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="mDf-NG-AIh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bxy-p0-Tg0">
-                                <rect key="frame" x="192" y="433" width="30" height="30"/>
-                                <state key="normal" title="Test"/>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="push" id="Q2t-iC-rCS"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="Bxy-p0-Tg0" firstAttribute="centerY" secondItem="mDf-NG-AIh" secondAttribute="centerY" id="4dd-OR-WHZ"/>
-                            <constraint firstItem="Bxy-p0-Tg0" firstAttribute="centerX" secondItem="mDf-NG-AIh" secondAttribute="centerX" id="pQ7-eJ-mKV"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Dxa-Hq-sFy"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="4fE-BM-fEN"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="R9N-UA-lTm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardIdentifier="Home" storyboardName="Home" id="m4g-yg-bLo" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="CJg-TS-9lt"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bFD-SM-uei" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-746" y="105"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DGeneration" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GaL-mS-0fe">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="y5a-wV-TrC"/>
-                                </connections>
-                            </scrollView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="GaL-mS-0fe" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="3zS-AN-xkg"/>
-                            <constraint firstAttribute="bottom" secondItem="GaL-mS-0fe" secondAttribute="bottom" id="5mS-1G-xAv"/>
-                            <constraint firstItem="GaL-mS-0fe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rm1-cU-Y63"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GaL-mS-0fe" secondAttribute="trailing" id="rtU-DV-vRL"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="KnY-XG-Crf"/>
-                    <connections>
-                        <outlet property="scrollView" destination="GaL-mS-0fe" id="kyi-Un-Jp6"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="275" y="108"/>
+            <point key="canvasLocation" x="-961" y="108"/>
         </scene>
     </scenes>
 </document>
