--- a/DGeneration/Business/Home/ViewController/Home.storyboard
+++ b/DGeneration/Business/Home/ViewController/Home.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8UU-hy-3pV" customClass="DGSegmentContainerView" customModule="DGeneration" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="161" width="414" height="748"/>
+                                        <rect key="frame" x="0.0" y="44" width="414" height="748"/>
                                         <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="748" id="lIe-6a-7Gv"/>
@@ -30,7 +30,7 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="8UU-hy-3pV" secondAttribute="trailing" id="VYs-Ai-8G2"/>
                                     <constraint firstItem="8UU-hy-3pV" firstAttribute="width" secondItem="ngJ-XI-UZ7" secondAttribute="width" id="Y4u-VO-MBk"/>
-                                    <constraint firstItem="8UU-hy-3pV" firstAttribute="top" secondItem="ngJ-XI-UZ7" secondAttribute="top" constant="161" id="YxI-BX-tUU"/>
+                                    <constraint firstItem="8UU-hy-3pV" firstAttribute="top" secondItem="ngJ-XI-UZ7" secondAttribute="top" id="Y5J-NT-V8N"/>
                                     <constraint firstItem="8UU-hy-3pV" firstAttribute="leading" secondItem="ngJ-XI-UZ7" secondAttribute="leading" id="eNv-gk-FMb"/>
                                     <constraint firstAttribute="bottom" secondItem="8UU-hy-3pV" secondAttribute="bottom" id="gje-Ro-09K"/>
                                 </constraints>
@@ -39,13 +39,13 @@
                                 </connections>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Cv-OC-pjd">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="161"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="302"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UMN-mK-ce2" customClass="DGHomeHeaderView" customModule="DGeneration" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="52" width="414" height="109"/>
+                                        <rect key="frame" x="0.0" y="52" width="414" height="250"/>
                                         <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="deviceRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="109" id="Jep-ds-Ebq"/>
+                                            <constraint firstAttribute="height" constant="250" id="Jep-ds-Ebq"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -64,6 +64,7 @@
                             <constraint firstItem="ngJ-XI-UZ7" firstAttribute="leading" secondItem="ZT7-Vh-KvD" secondAttribute="leading" id="RhL-Wl-e3Y"/>
                             <constraint firstItem="UMN-mK-ce2" firstAttribute="top" secondItem="ZT7-Vh-KvD" secondAttribute="top" constant="8" id="XB2-NK-ifS"/>
                             <constraint firstAttribute="bottom" secondItem="ngJ-XI-UZ7" secondAttribute="bottom" id="b2w-nt-ukf"/>
+                            <constraint firstItem="8UU-hy-3pV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ZT7-Vh-KvD" secondAttribute="top" id="byZ-da-vbC"/>
                             <constraint firstItem="4Cv-OC-pjd" firstAttribute="trailing" secondItem="ZT7-Vh-KvD" secondAttribute="trailing" id="d4x-gJ-aPL"/>
                             <constraint firstItem="4Cv-OC-pjd" firstAttribute="top" secondItem="hGP-xj-euh" secondAttribute="top" id="r6Z-BB-mBj"/>
                             <constraint firstItem="4Cv-OC-pjd" firstAttribute="leading" secondItem="ZT7-Vh-KvD" secondAttribute="leading" id="ses-Xf-HEY"/>
