--- a/DGeneration/Business/Home/View/DGHomeHeaderView.xib
+++ b/DGeneration/Business/Home/View/DGHomeHeaderView.xib
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DGHomeHeaderView" customModule="DGeneration" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="y75-Z6-7wH"/>
+                <outlet property="doneFloatingButton" destination="QL1-Iq-NLZ" id="Oaz-4o-CXw"/>
                 <outlet property="imageView" destination="IGK-dQ-j2q" id="S28-4u-DRL"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="215"/>
+        <view clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d1k-3J-Wjt">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="215"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="May 31th, 2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NSe-6n-UNV">
                             <rect key="frame" x="29" y="20" width="103.5" height="19.5"/>
@@ -40,10 +41,20 @@
                                 <constraint firstAttribute="width" constant="85" id="oaH-nm-Gc8"/>
                             </constraints>
                         </imageView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QL1-Iq-NLZ" customClass="DWFloatingButton" customModule="DGeneration" customModuleProvider="target">
+                            <rect key="frame" x="22" y="110" width="90" height="140"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="90" id="LTv-ix-EZl"/>
+                                <constraint firstAttribute="height" constant="140" id="j6G-ev-bN0"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="QL1-Iq-NLZ" secondAttribute="bottom" id="0jZ-0g-F8M"/>
                         <constraint firstItem="IGK-dQ-j2q" firstAttribute="top" secondItem="d1k-3J-Wjt" secondAttribute="top" constant="20" id="9Gx-tc-aqu"/>
+                        <constraint firstItem="QL1-Iq-NLZ" firstAttribute="leading" secondItem="d1k-3J-Wjt" secondAttribute="leading" constant="22" id="R7y-t9-yjy"/>
                         <constraint firstItem="PiN-Bf-2ny" firstAttribute="leading" secondItem="NSe-6n-UNV" secondAttribute="leading" id="S8s-V9-A9f"/>
                         <constraint firstItem="NSe-6n-UNV" firstAttribute="top" secondItem="d1k-3J-Wjt" secondAttribute="top" constant="20" id="SkM-9U-K5r"/>
                         <constraint firstAttribute="trailing" secondItem="IGK-dQ-j2q" secondAttribute="trailing" constant="22" id="f02-WT-3ph"/>
