--- a/DGeneration/Business/Home/View/DGHomeHeaderView.xib
+++ b/DGeneration/Business/Home/View/DGHomeHeaderView.xib
@@ -12,6 +12,7 @@
                 <outlet property="contentView" destination="iN0-l3-epB" id="y75-Z6-7wH"/>
                 <outlet property="doneFloatingButton" destination="QL1-Iq-NLZ" id="Oaz-4o-CXw"/>
                 <outlet property="imageView" destination="IGK-dQ-j2q" id="S28-4u-DRL"/>
+                <outlet property="remainFloatingButton" destination="tOn-hA-KH0" id="QNR-yj-pZr"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -42,18 +43,28 @@
                             </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QL1-Iq-NLZ" customClass="DWFloatingButton" customModule="DGeneration" customModuleProvider="target">
-                            <rect key="frame" x="22" y="110" width="90" height="140"/>
+                            <rect key="frame" x="22" y="107" width="86" height="103"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="90" id="LTv-ix-EZl"/>
-                                <constraint firstAttribute="height" constant="140" id="j6G-ev-bN0"/>
+                                <constraint firstAttribute="width" constant="86" id="LTv-ix-EZl"/>
+                                <constraint firstAttribute="height" constant="103" id="j6G-ev-bN0"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tOn-hA-KH0" customClass="DWFloatingButton" customModule="DGeneration" customModuleProvider="target">
+                            <rect key="frame" x="164" y="107" width="86" height="103"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="86" id="k69-K7-kgj"/>
+                                <constraint firstAttribute="height" constant="103" id="zH7-fB-4pj"/>
                             </constraints>
                         </view>
                     </subviews>
                     <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="QL1-Iq-NLZ" secondAttribute="bottom" id="0jZ-0g-F8M"/>
+                        <constraint firstAttribute="bottom" secondItem="QL1-Iq-NLZ" secondAttribute="bottom" constant="40" id="0jZ-0g-F8M"/>
+                        <constraint firstItem="tOn-hA-KH0" firstAttribute="bottom" secondItem="QL1-Iq-NLZ" secondAttribute="bottom" id="8kF-R5-r2y"/>
                         <constraint firstItem="IGK-dQ-j2q" firstAttribute="top" secondItem="d1k-3J-Wjt" secondAttribute="top" constant="20" id="9Gx-tc-aqu"/>
+                        <constraint firstItem="tOn-hA-KH0" firstAttribute="centerX" secondItem="d1k-3J-Wjt" secondAttribute="centerX" id="EgH-zU-ck8"/>
                         <constraint firstItem="QL1-Iq-NLZ" firstAttribute="leading" secondItem="d1k-3J-Wjt" secondAttribute="leading" constant="22" id="R7y-t9-yjy"/>
                         <constraint firstItem="PiN-Bf-2ny" firstAttribute="leading" secondItem="NSe-6n-UNV" secondAttribute="leading" id="S8s-V9-A9f"/>
                         <constraint firstItem="NSe-6n-UNV" firstAttribute="top" secondItem="d1k-3J-Wjt" secondAttribute="top" constant="20" id="SkM-9U-K5r"/>
