--- a/DGeneration/Business/Home/ViewController/Home.storyboard
+++ b/DGeneration/Business/Home/ViewController/Home.storyboard
@@ -2,9 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cf6-14-szW">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -81,6 +81,124 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hxo-Mc-yyC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-5.7971014492753632" y="-134.59821428571428"/>
+        </scene>
+        <!--Home Daily List View Controller-->
+        <scene sceneID="hXP-bd-ZQX">
+            <objects>
+                <viewController storyboardIdentifier="DGHomeDailyListViewController" id="kBa-zc-t5O" customClass="DGHomeDailyListViewController" customModule="DGeneration" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Quv-i4-bET">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="128" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="e6B-fm-mQ0">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="yLM-6T-L5r">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="208"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="1cG-4E-CQY">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="208"/>
+                                            <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="214" id="6pX-lL-71i"/>
+                                            </constraints>
+                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hM6-I9-to8">
+                                                <size key="itemSize" width="140" height="168"/>
+                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                <inset key="sectionInset" minX="22" minY="20" maxX="0.0" maxY="0.0"/>
+                                            </collectionViewFlowLayout>
+                                            <cells>
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DGHomeDailyHabitCell" id="3VH-k3-EPU" customClass="DGHomeDailyHabitCell" customModule="DGeneration" customModuleProvider="target">
+                                                    <rect key="frame" x="22" y="30" width="140" height="168"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8UE-Ws-4Se">
+                                                        <rect key="frame" x="0.0" y="0.0" width="140" height="168"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <subviews>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hi1-ov-yBA" customClass="EMTNeumorphicView" customModule="EMTNeumorphicView">
+                                                                <rect key="frame" x="0.0" y="0.0" width="140" height="168"/>
+                                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                            </view>
+                                                        </subviews>
+                                                        <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <constraints>
+                                                            <constraint firstItem="hi1-ov-yBA" firstAttribute="top" secondItem="8UE-Ws-4Se" secondAttribute="top" id="Enc-CZ-Z4l"/>
+                                                            <constraint firstAttribute="trailing" secondItem="hi1-ov-yBA" secondAttribute="trailing" id="Vfs-P0-Txy"/>
+                                                            <constraint firstItem="hi1-ov-yBA" firstAttribute="leading" secondItem="8UE-Ws-4Se" secondAttribute="leading" id="d0C-c3-e9w"/>
+                                                            <constraint firstAttribute="bottom" secondItem="hi1-ov-yBA" secondAttribute="bottom" id="xEc-vg-z90"/>
+                                                        </constraints>
+                                                    </collectionViewCellContentView>
+                                                    <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <connections>
+                                                        <outlet property="containerView" destination="hi1-ov-yBA" id="TMi-IQ-i3H"/>
+                                                    </connections>
+                                                </collectionViewCell>
+                                            </cells>
+                                            <connections>
+                                                <outlet property="dataSource" destination="kBa-zc-t5O" id="Jcy-NJ-zA3"/>
+                                                <outlet property="delegate" destination="kBa-zc-t5O" id="3DK-ip-sgV"/>
+                                            </connections>
+                                        </collectionView>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="1cG-4E-CQY" firstAttribute="top" secondItem="yLM-6T-L5r" secondAttribute="top" id="7fH-za-I9V"/>
+                                        <constraint firstItem="1cG-4E-CQY" firstAttribute="leading" secondItem="yLM-6T-L5r" secondAttribute="leading" id="DbE-8y-jY3"/>
+                                        <constraint firstAttribute="trailing" secondItem="1cG-4E-CQY" secondAttribute="trailing" id="Fn9-gp-Zzd"/>
+                                        <constraint firstAttribute="bottom" secondItem="1cG-4E-CQY" secondAttribute="bottom" id="dFI-PD-f4n"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DGHomeDailyItemCell" id="H4b-SO-Jq5" customClass="DGHomeDailyItemCell" customModule="DGeneration" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="236" width="414" height="128"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="H4b-SO-Jq5" id="Zqk-mZ-Upz">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c49-PS-jQU" customClass="EMTNeumorphicView" customModule="EMTNeumorphicView">
+                                                    <rect key="frame" x="20" y="10" width="374" height="108"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="c49-PS-jQU" secondAttribute="trailing" constant="20" id="0lF-no-1TI"/>
+                                                <constraint firstItem="c49-PS-jQU" firstAttribute="top" secondItem="Zqk-mZ-Upz" secondAttribute="top" constant="10" id="7jx-8W-TnJ"/>
+                                                <constraint firstItem="c49-PS-jQU" firstAttribute="leading" secondItem="Zqk-mZ-Upz" secondAttribute="leading" constant="20" id="FVK-Nd-leC"/>
+                                                <constraint firstAttribute="bottom" secondItem="c49-PS-jQU" secondAttribute="bottom" constant="10" id="iNV-hi-zea"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="containerView" destination="c49-PS-jQU" id="vIS-5J-gqj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="kBa-zc-t5O" id="8Vc-tf-Bwf"/>
+                                    <outlet property="delegate" destination="kBa-zc-t5O" id="GUf-Ic-jrl"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="e6B-fm-mQ0" firstAttribute="top" secondItem="Quv-i4-bET" secondAttribute="top" id="6Fx-01-VN1"/>
+                            <constraint firstItem="Y0M-63-lsD" firstAttribute="trailing" secondItem="e6B-fm-mQ0" secondAttribute="trailing" id="7MS-OY-sNA"/>
+                            <constraint firstAttribute="bottom" secondItem="e6B-fm-mQ0" secondAttribute="bottom" id="jBN-c5-TMs"/>
+                            <constraint firstItem="e6B-fm-mQ0" firstAttribute="leading" secondItem="Y0M-63-lsD" secondAttribute="leading" id="wrz-jM-BpA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Y0M-63-lsD"/>
+                    </view>
+                    <connections>
+                        <outlet property="dailyTableView" destination="e6B-fm-mQ0" id="ufY-jV-26B"/>
+                        <outlet property="habitCollectionView" destination="1cG-4E-CQY" id="4D9-mT-mOV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IRv-bU-Y9v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="815.94202898550736" y="-135.26785714285714"/>
         </scene>
     </scenes>
 </document>
